adding competitions module
